<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemoteActivity"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            >

            <TextView
                android:id="@+id/shutterView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/focusView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/recordView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textAlignment="center"
                />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
            android:fillViewport="false"
            android:gravity="center"
            android:scrollbarStyle="outsideInset"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                >

                <Button
                    android:id="@+id/shutter_button"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/shutter_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    />

                <Button
                    android:id="@+id/record_button"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/record_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:id="@+id/custom_button"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/custom_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />


                <Button
                    android:id="@+id/af_on_button"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/af_on_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />
                <Button
                    android:id="@+id/zoom_in_button"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/zoom_in_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:id="@+id/zoom_out_button"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/zoom_out_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:id="@+id/focus_in_button"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/focus_in_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:id="@+id/focus_out_button"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/focus_out_button_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />



            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>